app/assets/stylesheets/gi_album/engine.css
/*
 * This is a manifest file that'll be compiled into engine.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add engine-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

gi-table-fixed {
  table-layout: fixed;
}

gi-table-fixed th:nth-child(1), td:nth-child(1) {
  overflow: hidden;
  width: 50%;
}
gi-table-fixed th:nth-child(2), td:nth-child(2) {
  overflow: hidden;
  width: 50%;
}

.gi-btn-pagination {
  width: 3em;
}

